--- a/profile/login/index.html
+++ b/profile/login/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Northern Auction home page" />
-    <title>Northern Auction | Register</title>
+    <title>Northern Auction | Login</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <script type="module" src="/src/js/index.mjs" defer></script>
   </head>
@@ -22,10 +22,10 @@
                 <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/src/profile/login/">My profile</a>
+                <a class="nav-link text-white" href="/profile/login/">My profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/src/profile/login/">Create listing</a>
+                <a class="nav-link text-white" href="/profile/login/">Create listing</a>
               </li>
             </ul>
             <form class="d-flex" role="search" id="search-form">
@@ -40,29 +40,20 @@
       <div class="container-fluid my-5 py-5">
         <div class="row justify-content-center">
           <div class="col-md-4">
-            <form id="registerForm">
-              <h1 class="h3 mb-3 fw-bold">Required *</h1>
+            <form id="loginForm">
               <div class="form-group mb-3">
-                <label for="">Name: *</label>
-                <input class="form-control" type="text" name="name" required pattern="^[\w]+$" title="User name must only contain lower case and upper case letters, numbers and underscore (_). Example: My_Username_23." />
+                <h1 class="h3 mb-3">Please sign in with your registered “stud.noroff.no” email.</h1>
+                <label for="">Email:</label>
+                <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="@(stud.)noroff.no are the only domains allowed to login." />
               </div>
               <div class="form-group mb-3">
-                <label for="">Email: *</label>
-                <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="@(stud.)noroff.no are the only domains allowed to register." />
-              </div>
-              <div class="form-group mb-3">
-                <label for="">Password: *</label>
+                <label for="">Password:</label>
                 <input class="form-control" type="password" name="password" required minlength="8" />
               </div>
-              <div class="form-group mb-3">
-                <label for="">Banner:</label>
-                <input class="form-control" type="url" name="banner" />
+              <div class="d-flex justify-content-evenly">
+                <button class="btn btn-lg btn-primary btn-block">Login</button>
+                <a href="/profile/register/"><button class="btn btn-lg btn-secondary btn-block" type="button">Register</button></a>
               </div>
-              <div class="form-group mb-3">
-                <label for="">Avatar:</label>
-                <input class="form-control" type="url" name="avatar" />
-              </div>
-              <button class="btn btn-success">Register</button>
             </form>
           </div>
         </div>
