--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Northern Auction home page" />
-    <title>Northern Auction | Edit Profile</title>
+    <title>Northern Auction | Register</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <script type="module" src="/src/js/index.mjs" defer></script>
   </head>
@@ -12,20 +12,20 @@
     <header class="fixed-top border-bottom">
       <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-          <a class="navbar-brand" href="/src/listings/">Northern Auction</a>
+          <a class="navbar-brand" href="/">Northern Auction</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-white" aria-current="page" href="/src/listings/">Home</a>
+                <a class="nav-link active text-white" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/src/profile/">My profile</a>
+                <a class="nav-link text-white" href="/src/profile/login/">My profile</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white" href="/src/listing/create/">Create listing</a>
+                <a class="nav-link text-white" href="/profile/login/">Create listing</a>
               </li>
             </ul>
             <form class="d-flex" role="search" id="search-form">
@@ -40,24 +40,29 @@
       <div class="container-fluid my-5 py-5">
         <div class="row justify-content-center">
           <div class="col-md-4">
-            <form id="editProfile">
+            <form id="registerForm">
+              <h1 class="h3 mb-3 fw-bold">Required *</h1>
               <div class="form-group mb-3">
-                <label for="">Name:</label>
-                <input class="form-control" type="text" disabled name="name" />
+                <label for="">Name: *</label>
+                <input class="form-control" type="text" name="name" required pattern="^[\w]+$" title="User name must only contain lower case and upper case letters, numbers and underscore (_). Example: My_Username_23." />
               </div>
               <div class="form-group mb-3">
-                <label for="">Email:</label>
-                <input class="form-control" type="email" disabled name="email" />
+                <label for="">Email: *</label>
+                <input class="form-control" type="email" name="email" required pattern="^[\w\-.]+@(stud\.)?noroff\.no$" title="@(stud.)noroff.no are the only domains allowed to register." />
               </div>
               <div class="form-group mb-3">
-                <label for="">Bio:</label>
-                <textarea class="form-control" name="bio"></textarea>
+                <label for="">Password: *</label>
+                <input class="form-control" type="password" name="password" required minlength="8" />
+              </div>
+              <div class="form-group mb-3">
+                <label for="">Banner:</label>
+                <input class="form-control" type="url" name="banner" />
               </div>
               <div class="form-group mb-3">
                 <label for="">Avatar:</label>
                 <input class="form-control" type="url" name="avatar" />
               </div>
-              <button class="btn btn-success">Update Profile</button>
+              <button class="btn btn-success">Register</button>
             </form>
           </div>
         </div>
