--- a/listing/index.html
+++ b/listing/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Northern Auction home page" />
-    <title>Northern Auction | Home</title>
+    <meta name="description" content="Northern Auction specific listing" />
+    <title>Northern Auction | Specific listing</title>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous" defer></script>
     <script type="module" src="/src/js/index.mjs" defer></script>
-    <script defer type="module" src="/src/js/handlers/readListing.mjs" defer></script>
+    <script type="module" src="/src/js/handlers/readListing.mjs" defer></script>
   </head>
   <body>
     <header class="fixed-top border-bottom">
@@ -38,7 +38,13 @@
       </nav>
     </header>
     <main class="d-flex align-items-center text-white">
-      <div class="container my-5 py-5"></div>
+      <div class="container-fluid my-5 py-5">
+        <div class="row justify-content-center">
+          <div class="col-md-9">
+            <div id="listing-container"></div>
+          </div>
+        </div>
+      </div>
     </main>
     <footer class="fixed-bottom text-white">
       <div class="justify-content-center border-top p-2">
