--- a/profile/register/index.html
+++ b/profile/register/index.html
@@ -55,6 +55,10 @@
                 <input class="form-control" type="password" name="password" required minlength="8" />
               </div>
               <div class="form-group mb-3">
+                <label for="">Bio:</label>
+                <textarea class="form-control" name="bio"></textarea>
+              </div>
+              <div class="form-group mb-3">
                 <label for="">Avatar:</label>
                 <input class="form-control" type="url" name="avatar" />
               </div>
