--- a/index.html
+++ b/index.html
@@ -42,15 +42,23 @@
           <div class="col-md-4">
             <h1 class="h3 mb-3">Welcome to Northern Auction. Sign in to bid or create listings.</h1>
             <div class="d-flex justify-content-evenly">
-              <a href="/profile/login/"><button class="btn btn-lg btn-primary btn-block">Sign in</button></a>
+              <a href="/profile/login/"><button class="btn btn-lg btn-secondary btn-block">Sign in</button></a>
               <a href="/profile/register/"><button class="btn btn-lg btn-secondary btn-block">Register</button></a>
             </div>
           </div>
           <div class="col-md-9 my-5 py-5">
             <div class="d-flex justify-content-between align-items-center mt-5">
               <h1>Listings</h1>
+              <select class="btn btn-primary" id="selection" aria-expanded="false" aria-label="Choose a sorting option:">
+                <option value="newest">Newest</option>
+                <option value="oldest">Oldest</option>
+              </select>
             </div>
             <div class="listings row" id="listing"></div>
+            <div class="d-flex justify-content-between">
+              <button id="prevPageButton" class="btn btn-primary mt-3">Previous Page</button>
+              <button id="nextPageButton" class="btn btn-primary mt-3">Next Page</button>
+            </div>
           </div>
         </div>
       </div>
